@@ -3877,13 +3877,6 @@ void MainWindow::createDocks()
 	addDockWidget(Qt::RightDockWidgetArea, m_dockNavigator);
 	m_dockNavigator->hide(); // hidden by default
 
-	// Create onion skin settings
-	m_dockOnionSkins = new docks::OnionSkinsDock(tr("Onion Skins"), this);
-	m_dockOnionSkins->setObjectName("onionskins");
-	m_dockOnionSkins->setAllowedAreas(Qt::AllDockWidgetAreas);
-	addDockWidget(Qt::TopDockWidgetArea, m_dockOnionSkins);
-	m_dockOnionSkins->hide(); // hidden by default
-
 	// Create timeline
 	m_dockTimeline = new docks::Timeline(this);
 	m_dockTimeline->setObjectName("Timeline");
@@ -3891,5 +3884,10 @@ void MainWindow::createDocks()
 	addDockWidget(Qt::TopDockWidgetArea, m_dockTimeline);
 	m_dockTimeline->hide(); // hidden by default
 
-	tabifyDockWidget(m_dockOnionSkins, m_dockTimeline);
+	// Create onion skin settings
+	m_dockOnionSkins = new docks::OnionSkinsDock(tr("Onion Skins"), this);
+	m_dockOnionSkins->setObjectName("onionskins");
+	m_dockOnionSkins->setAllowedAreas(Qt::AllDockWidgetAreas);
+	addDockWidget(Qt::TopDockWidgetArea, m_dockOnionSkins);
+	m_dockOnionSkins->hide(); // hidden by default
 }
