@@ -30,6 +30,7 @@ Unreleased Version 2.2.0-pre
  * Feature: Allow adding an avatar from the login dialog.
  * Fix: Show main window maximized by default, because who wants a drawing program in a tiny window.
  * Fix: Give docks sensible initial sizes. Thanks to xxxx for reporting.
+ * Fix: Don't tabify the now invisible-by-default timeline and onion skins by default. Thanks Ben for finding.
 
 2023-07-31 Version 2.2.0-beta.6
  * Fix: Don't forget account password when entering a wrong session password.
